--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vuetify": "^3.11.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
